<resources>
    <string name="app_name">客商e宝</string>
    <string name="sharemall_tab_mine">我的</string>
    <string name="sharemall_tab_home">首页</string>
    <string name="sharemall_tab_local_life">本地生活</string>
    <string name="sharemall_tab_shopping_car">购物车</string>
    <string name="sharemall_please_input_code">请输入验证码</string>
    <string name="basemall_pwd_login">密码登录</string>
    <string name="basemall_sms_login">短信登录</string>
    <string name="basemall_input_phone_number">请输入手机号</string>
    <string name="basemall_input_account_number">请输入账号</string>
    <string name="basemall_input_validate_code">请输入验证码</string>
    <string name="basemall_please_input_password">请输入密码</string>
    <string name="basemall_get_identifying_code">获取验证码</string>
    <string name="basemall_forget_password">忘记密码？</string>
    <string name="basemall_login">登录</string>
    <string name="basemall_no_bind_phone">您还没绑定手机号噢</string>
    <string name="basemall_register_success">注册成功</string>
    <string name="sharemall_input_new_phone">请输入您的新手机号码</string>
    <string name="basemall_bind_phone_info">
        根据国家互联网信息办公室发布的《移动互联网应用程序信息服务管理规定》自2016年8月20日起，要求互联网注册用户
        基于移动电话号码等真实身份信息进行实名认证，所以需要您完成绑定手机号的操作。
    </string>
    <string name="basemall_i_know">我知道了</string>
    <string name="basemall_authorization_failed">获取授权信息失败，请重试</string>
    <string name="basemall_authorization_failed_tips">获取授权信息失败：</string>
    <string name="basemall_authorization_cancel">您取消了授权</string>
    <string name="basemall_login_success">登录成功</string>
    <string name="basemall_reset_login_password_successful">重置登录密码成功</string>
    <string name="sharemall_please_input_pay_pwd">请输入交易密码(6位及6位以上)</string>
    <string name="sharemall_please_confirm_pay_pwd">请确认交易密码(6位及6位以上)</string>
    <string name="sharemall_confirm_ok">确定</string>
    <string name="basemall_use_third_account_login">第三方登录</string>
    <string name="basemall_register_quick">快捷注册</string>
    <string name="basemall_register_go">没有账号，去注册</string>
    <string name="sharemall_search_hint">搜索您想要的商品</string>
    <string name="sharemall_search_history">历史搜索</string>
    <string name="sharemall_search_hot">热门搜索</string>
    <string name="sharemall_search_good_hint">搜索商品，共2000款好物！</string>
    <string name="sharemall_search_no_result">并没有搜索到相关内容，请更换关键字试试</string>
    <string name="sharemall_format_order_goods_num">共%1$d件商品</string>
    <string name="sharemall_commodity_settlement">商品结算</string>
    <string name="sharemall_already_reduced">已减</string>
    <string name="sharemall_order_details_pay_amount">需支付:</string>
    <string name="sharemall_goods_info">商品信息</string>
    <string name="sharemall_pay_type1">支付方式：</string>
    <string name="sharemall_not_watch_order_with_price">不希望看到带有价格的发货：</string>
    <string name="sharemall_points">积分</string>
    <string name="sharemall_credit_deduction_amount">可使用%1$d积分抵扣%2$d元</string>
    <string name="sharemall_cny_unit">元</string>
    <string name="sharemall_custom_service">客服</string>
    <string name="sharemall_format_sum_money">¥%1$s</string>
    <string name="sharemall_format_goods_sum">共%1$s件商品</string>
    <string name="sharemall_format_follow">%1$d人关注</string>
    <string name="sharemall_buy_now">立即购买</string>
    <string name="sharemall_buy">购买</string>
    <string name="sharemall_format_num">×%1$s</string>
    <string name="sharemall_subtotal">小计：</string>
    <string name="sharemall_buyer_remark">买家留言</string>
    <string name="sharemall_buyer_remark2">买家留言…</string>
    <string name="sharemall_buyer_remark_num">0/140</string>
    <string name="sharemall_wx_pay">微信支付</string>
    <string name="sharemall_ali_pay">支付宝支付</string>
    <string name="sharemall_apple_pay">Apple Pay</string>
    <string name="sharemall_integral_pay">海贝支付</string>
    <string name="sharemall_union_pay">银联支付</string>
    <string name="sharemall_balance_payment">余额支付</string>
    <string name="sharemall_balance_hai">余额：%1$s</string>
    <string name="sharemall_eth">ETH</string>
    <string name="sharemall_total">合计：</string>
    <string name="sharemall_pay_time_hint">请在30分钟内完成付款</string>
    <string name="sharemall_payment_of_remaining_time">支付剩余时间</string>
    <string name="sharemall_payment_of_remaining_time2">剩余支付时间</string>
    <string name="sharemall_select_pay_type">选择付款方式</string>
    <string name="sharemall_back_home">回首页</string>
    <string name="sharemall_to_shopping">继续购买商品</string>
    <string name="sharemall_back_home2">返回首页</string>
    <string name="sharemall_safety_reminder">安全提醒</string>
    <string name="sharemall_three">3</string>
    <string name="sharemall_guess_you_like_it">猜你喜欢</string>
    <string name="sharemall_guess_you_like_it2">— 猜你喜欢 —</string>
    <string name="sharemall_baby_your_choice">琳琅宝贝任你挑选</string>
    <string name="sharemall_good_price">商品金额</string>
    <string name="sharemall_shop_preferences">商家优惠</string>
    <string name="sharemall_format_goods_sale">已售%1$s件</string>
    <string name="sharemall_add_address_hint">新建收货地址，保证商品顺利送达！</string>
    <string name="sharemall_no_order">暂无相关订单</string>
    <string name="sharemall_payment_should_not_be_less_than_0">支付金额不能少于0元</string>
    <string name="sharemall_deduction_should_not_be_less_than_0">抵扣金额不能少于0元</string>
    <string name="sharemall_please_set_the_address_first">请先设置收货地址</string>
    <string name="sharemall_not_set_balance_pay_password">您还未设置支付密码，\n请先去设置密码</string>
    <string name="sharemall_to_set_up">去设置</string>
    <string name="sharemall_address">地址</string>
    <string name="sharemall_select">选择</string>
    <string name="sharemall_all_order">全部订单</string>
    <string name="sharemall_title_digital_price">海贝支付</string>
    <string name="pay_score">积分支付（剩400积分）</string>
    <string name="format_pay_score">积分支付（剩%1$d积分）</string>
    <string name="sharemall_digital_price_pay_hint">提示：如若支付使用数字钱包支付，请保证余额充足，支付将不会收取您的任何支付费用，只会自动扣取您的对应数字钱包余额。</string>
    <string name="sharemall_please_input_property_password">请输入资产密码</string>
    <string name="sharemall_next_step">下一步</string>
    <string name="sharemall_pay_success">支付成功</string>
    <string name="sharemall_issue">发布</string>
    <string name="sharemall_new_version_tips">APP有新版本可以使用了</string>
    <string name="sharemall_format_sign_config_day">天%1$s元优惠券自动到账</string>
    <string name="sharemall_format_sign_config_day2">— 连续签到%1$s天得%2$s元优惠券，累计签到有更多惊喜！—</string>
    <string name="sharemall_format_sign_today_coin">今日已领取%1$s积分</string>
    <string name="sharemall_cumulative_attendance">累计签到</string>
    <string name="sharemall_rapidl_yincreasing_growth_value">快速增加成长值</string>
    <string name="sharemall_sign_total_day">已连签</string>
    <string name="sharemall_sign_task">签到任务</string>
    <string name="sharemall_re_sign_day">天，再签</string>
    <string name="sharemall_sign_now">立即签到</string>
    <string name="sharemall_sign_coupon_hint">签到送优惠券 全场通用</string>
    <string name="sharemall_coupon_price">元优惠券</string>
    <string name="sharemall_sign_title">签到领币</string>
    <string name="sharemall_sign">签到</string>
    <string name="sharemall_mine_growth">我的成长值</string>
    <string name="sharemall_growth_share_task">分享任务</string>
    <string name="sharemall_growth_add_quickly">快速增加成长值</string>
    <string name="sharemall_mine_growth_details">成长明细</string>
    <string name="sharemall_format_growth_value">当前V值：%1$s</string>
    <string name="sharemall_growth_value">成长值</string>
    <string name="sharemall_no_help_information">没有帮助信息</string>
    <string name="sharemall_login_no_wechat_client">请先安装微信客户端</string>
    <string name="sharemall_login_get_wechat_auth_error">获取授权信息失败</string>
    <string name="sharemall_login_cancel_wechat_auth">您取消了授权</string>
    <string name="sharemall_please_bind_your_mobile_number_first">请先绑定手机号码</string>
    <string name="sharemall_reacquire_verification_code">s后获取</string>
    <string name="sharemall_bind_phone_number">绑定手机号</string>
    <string name="sharemall_confirm_binding">确认绑定</string>
    <string name="sharemall_user_agreement">同意《用户协议》</string>
    <string name="please_agreement_service_guide">请同意《服务条款》及《隐私协议》</string>
    <string name="sharemall_fill_in_the_invitation_code">填写邀请码</string>
    <string name="basemall_please_input_the_invitation_code">请输入邀请码（选填）</string>
    <string name="basemall_please_input_the_code">请输入验证码</string>
    <string name="sharemall_invitation_code">邀请码</string>
    <string name="sharemall_bind_immediately">立即绑定</string>
    <string name="sharemall_membership_platform">会员制新零售电商平台</string>
    <string name="sharemall_wechat_login">微信登录</string>
    <string name="sharemall_wechat_account_login">微信号登录</string>
    <string name="sharemall_mobile_number_login">手机号登录</string>
    <string name="sharemall_mobile_number_register">手机号注册</string>
    <string name="sharemall_login">登录</string>
    <string name="sharemall_phone_number">手机号</string>
    <string name="basemall_please_input_password_again">请再次输入密码</string>
    <string name="sharemall_phone_number_login">手机号登录</string>
    <string name="sharemall_bind_invitation_code_tips">1.可联系你的好友获取邀请码； \n2.一个用户只能绑定一个邀请码，绑定后不得修改。</string>
    <string name="sharemall_pay_pwd_setting">支付密码设置</string>
    <string name="sharemall_pay_pwd_setting2">设置交易密码</string>
    <string name="sharemall_reset_pwd">重置密码</string>
    <string name="sharemall_set_pay_pwd_hint">为保护您的资产交易安全，需要设置交易密码</string>
    <string name="sharemall_please_input_pay_pwd_again">请再次输入交易密码</string>
    <string name="basemall_register">注册</string>
    <string name="basemall_read_and_agree">我已阅读并同意</string>
    <string name="basemall_terms_of_service">《服务协议》</string>
    <string name="basemall_agreement_of_private">《隐私政策》</string>
    <string name="basemall_terms_of_service_and_agreement_of_private">《服务协议与隐私政策》</string>
    <string name="basemall_terms_of_service1">服务协议</string>
    <string name="basemall_agreement_of_private1">隐私政策</string>
    <string name="basemall_get_authentication_code_first">请先获取验证码</string>
    <string name="sharemall_user_info">个人信息</string>
    <string name="sharemall_head_image">头像</string>
    <string name="sharemall_nick_name">昵称</string>
    <string name="sharemall_sex">性别</string>
    <string name="sharemall_phone">手机号</string>
    <string name="person_transition_avatar">userAvatar</string>
    <string name="person_transition_name">userName</string>
    <string name="sharemall_no_wechat_card_configured">上级未配置微信名片</string>
    <string name="sharemall_sex_man">男</string>
    <string name="sharemall_sex_women">女</string>
    <string name="sharemall_sex_unknow">未知</string>
    <string name="sharemall_my_integral">我的积分</string>
    <string name="sharemall_my_wallet">我的钱包</string>
    <string name="sharemall_my_collection">我的收藏</string>
    <string name="sharemall_cancel">取消</string>
    <string name="sharemall_refund_details_input_no_info">商家已同意您的退货退款申请，请填写物流单号</string>
    <string name="sharemall_refund_details_cancel_apply">取消申请</string>
    <string name="sharemall_refund_details_input_no">填写物流</string>
    <string name="sharemall_add_to_cart">加入购物车</string>
    <string name="sharemall_cumulative">累计</string>
    <string name="sharemall_today">当日</string>
    <string name="sharemall_current_week">当周</string>
    <string name="sharemall_current_month">当月</string>
    <string name="sharemall_img">图片</string>
    <string name="sharemall_to_wechat_moment">快去微信发送朋友圈吧！</string>
    <string name="sharemall_share_now">立即分享</string>
    <string name="sharemall_copied">已复制,</string>
    <string name="sharemall_material">素材文案</string>
    <string name="sharemall_saved_to_album">已保存到相册</string>
    <string name="sharemall_watch_today_sell">逛逛今日特卖</string>
    <string name="sharemall_fill_order_auth_tips">根据国家监管部门规定，涉及到境外商品需要对购买人信息实名备案。猎米社交电商将保护消费者隐私信息，请放心填写</string>
    <string name="sharemall_name">姓名</string>
    <string name="sharemall_id_card">身份证</string>
    <string name="sharemall_please_id_card">请输入身份证号</string>
    <string name="sharemall_please_input_name_same_receive">请输入姓名（与收件人一致）</string>
</resources>