<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable
            name="listener"
            type="android.view.View.OnClickListener"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <View
            android:onClick="@{listener}"
            android:id="@+id/view_bg"
            android:background="#5c000000"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <LinearLayout
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:onClick="@{listener}"
                android:id="@+id/tv_today"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/sharemall_today"
                android:textColor="#ff333333"
                android:textSize="18sp"/>
            <View
                android:background="@color/theme_bg"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:onClick="@{listener}"
                android:id="@+id/tv_current_week"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/sharemall_current_week"
                android:textColor="#ff333333"
                android:textSize="18sp"/>
            <View
                android:background="@color/theme_bg"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:onClick="@{listener}"
                android:id="@+id/tv_current_month"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/sharemall_current_month"
                android:textColor="#ff333333"
                android:textSize="18sp"/>
            <View
                android:background="@color/theme_bg"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:onClick="@{listener}"
                android:id="@+id/tv_count"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/sharemall_cumulative"
                android:textColor="#ff333333"
                android:textSize="18sp"/>
            <View
                android:background="@color/theme_bg"
                android:layout_width="match_parent"
                android:layout_height="7dp"/>
            <TextView
                android:onClick="@{listener}"
                android:id="@+id/tv_cancel"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:text="@string/sharemall_cancel"
                android:textColor="#ff333333"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
</layout>