<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="doClick"
            type="android.view.View.OnClickListener" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:background="@drawable/baselib_bg_white_radius_4"
        android:paddingTop="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--取消按钮-->
        <ImageView
            android:id="@+id/iv_share_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:onClick="@{doClick}"
            android:padding="10dp"
            android:src="@mipmap/sharemall_ic_share_cancel"
            app:layout_constraintRight_toRightOf="parent" />

        <ImageView
            android:id="@+id/iv_share_finish_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:src="@mipmap/sharemall_ic_share_save_finish"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_image_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_share_finish_image">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharemall_material"
                android:textColor="#ffd71e43"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharemall_copied"
                android:textColor="#333333"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharemall_img"
                android:textColor="#ffd71e43"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sharemall_saved_to_album"
                android:textColor="#333333"
                android:textSize="15sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_to_moment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:text="@string/sharemall_to_wechat_moment"
            android:textColor="#333333"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_image_save" />

        <!--立即分享-->
        <TextView
            android:id="@+id/tv_share_now"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/sharemall_radius_4dp_gradient_d72b18_d71857"
            android:gravity="center"
            android:onClick="@{doClick}"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/sharemall_share_now"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_to_moment" />
    </android.support.constraint.ConstraintLayout>
</layout>