<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="checkedListener"
            type="android.widget.CompoundButton.OnCheckedChangeListener" />

        <variable
            name="item"
            type="com.liemi.seashellmallclient.data.entity.good.GoodsDetailedEntity" />

        <variable
            name="isVIP"
            type="Boolean" />

        <import type="com.netmi.baselibrary.utils.Strings" />

        <variable
            name="doClick"
            type="android.view.View.OnClickListener" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/ll_footer"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/iv_server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:drawableTop="@mipmap/sharemall_ic_service"
                android:drawablePadding="2dp"
                android:onClick="@{doClick}"
                android:paddingRight="15dp"
                android:text="@string/sharemall_custom_service"
                android:textColor="#ff888888"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/iv_shop_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@mipmap/sharemall_shop_car"
                android:drawablePadding="2dp"
                android:paddingRight="12dp"
                android:onClick="@{doClick}"
                android:text="@string/sharemall_tab_shopping_car"
                android:textColor="#ff888888"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_add_shop_cart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#FE9731"
                android:gravity="center"
                android:onClick="@{doClick}"
                android:paddingHorizontal="10dp"
                android:text="@string/sharemall_add_to_cart"
                android:textColor="@color/white"
                android:textSize="15sp"
                tool:text="加入购物车" />

            <skin.support.widget.SkinCompatTextView
                android:id="@+id/tv_buy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/bgColor"
                android:gravity="center"
                android:onClick="@{doClick}"
                android:text="@string/sharemall_buy_now"
                android:textColor="@color/white"
                android:textSize="15sp"
                tool:text="立即购买" />

        </LinearLayout>

        <com.netmi.baselibrary.widget.MyXRecyclerView
            android:id="@+id/xrv_good"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_footer"
            android:overScrollMode="never" />

    </RelativeLayout>

</layout>



